--- a/scala-study/.settings/org.hibernate.eclipse.console.prefs
+++ b/scala-study/.settings/org.hibernate.eclipse.console.prefs
@@ -1,3 +1,3 @@
-default.configuration=
+default.configuration=scala-study
 eclipse.preferences.version=1
-hibernate3.enabled=false
+hibernate3.enabled=true
