--- a/groovydin-seminar/.classpath
+++ b/groovydin-seminar/.classpath
@@ -16,7 +16,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-server/7.6.5/vaadin-server-7.6.5.jar" sourcepath="M2_REPO/com/vaadin/vaadin-server/7.6.5/vaadin-server-7.6.5-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-server/7.6.5/vaadin-server-7.6.5.jar" sourcepath="C:/Users/TC/.m2/repository/com/vaadin/vaadin-server/7.6.5/vaadin-server-7.6.5-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/vaadin-sass-compiler/0.9.13/vaadin-sass-compiler-0.9.13.jar" sourcepath="M2_REPO/com/vaadin/vaadin-sass-compiler/0.9.13/vaadin-sass-compiler-0.9.13-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar" sourcepath="M2_REPO/org/w3c/css/sac/1.3/sac-1.3-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/vaadin/external/flute/flute/1.3.0.gg2/flute-1.3.0.gg2.jar" sourcepath="M2_REPO/com/vaadin/external/flute/flute/1.3.0.gg2/flute-1.3.0.gg2-sources.jar"/>
