--- a/scaladin-seminar/pom.xml
+++ b/scaladin-seminar/pom.xml
@@ -90,6 +90,13 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.7</version>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
+			<artifactId>scaladin</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		 -->
 	</dependencies>
 
 	<build>
