--- a/scala-study/.settings/org.scala-ide.sdt.core.prefs
+++ b/scala-study/.settings/org.scala-ide.sdt.core.prefs
@@ -59,9 +59,9 @@ organizeimports.scalapackage=false
 organizeimports.wildcards=scalaz$scalaz.Scalaz
 recompileOnMacroDef=true
 relationsDebug=false
-scala.compiler.additionalParams=
-scala.compiler.installation=2128370368
-scala.compiler.sourceLevel=2.11
+scala.compiler.additionalParams=\ -Xsource\:2.10 -Ymacro-expand\:none
+scala.compiler.installation=2.10
+scala.compiler.sourceLevel=2.10
 scala.compiler.useProjectSettings=true
 stopBuildOnError=false
 syntaxColouring.bracket.backgroundColourEnabled=false
