--- a/scala-study/pom.xml
+++ b/scala-study/pom.xml
@@ -69,14 +69,17 @@
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
-			<version>2.10.6</version>
+			<version>2.10.0</version>
 		</dependency>
-		<!-- 
-		 -->
+		<dependency>
+		    <groupId>org.scala-lang</groupId>
+		    <artifactId>scala-actors</artifactId>
+		    <version>2.10.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-swing</artifactId>
-			<version>2.10.6</version>
+			<version>2.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
