--- a/jpa-study/pom.xml
+++ b/jpa-study/pom.xml
@@ -10,69 +10,27 @@
   <name>jpa-study</name>
   <url>http://maven.apache.org</url>
 
-<properties>
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<lucene.version>2.3.0</lucene.version>
-		<springframework.version>4.0.1.RELEASE</springframework.version>
-		<slf4j.version>1.6.1</slf4j.version>
-		<log4j.version>1.2.17</log4j.version>
-		<twitter4j.version>4.0.0</twitter4j.version>
-		<jedis.version>2.3.0</jedis.version>
-		<springdata.version>1.3.0.RELEASE</springdata.version>
-		<storm.version>0.9.0.1</storm.version>
+		<hadoop.version>2.2.0</hadoop.version>
+		<java.version>1.8</java.version>
+  		<scala-version>2.10.0</scala-version>
 	</properties>
-	
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<environment>dev</environment>
-			</properties>
-		</profile>
-		<profile>
-			<id>real</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<environment>real</environment>
-			</properties>
-		</profile>
-	</profiles>
-	
-	<repositories>
-		<repository>
-			<id>jboss-3rd-party-releases</id>
-			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
-		</repository>
-		<repository>
-			<id>tapacross</id>
-			<url>http://121.254.177.182:8081/nexus/content/repositories/tapacross</url>
-		</repository>
-		<repository>
-			<id>clojars.org</id>
-			<url>http://clojars.org/repo</url>
-		</repository>		
-	</repositories>
-	
+
 	<dependencies>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.3.10</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.10.0</version>
-		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<testSourceDirectory>src/test/java</testSourceDirectory>
@@ -87,6 +45,38 @@
 				<directory>src/main/resources/${environment}</directory>
 			</resource>
 		</resources>
+		<pluginManagement>
+			<plugins>
+		      	<!-- groovy classes를 생성하기 위한 플러그인 -->
+				<!-- http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<compilerId>groovy-eclipse-compiler</compilerId>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.codehaus.groovy</groupId>
+							<artifactId>groovy-eclipse-compiler</artifactId>
+							<version>2.9.0-01</version>
+							<exclusions>
+								<exclusion>
+									<groupId>org.codehaus.groovy</groupId>
+									<artifactId>groovy-eclipse-batch</artifactId>
+								</exclusion>
+							</exclusions>
+						</dependency>
+						<dependency>
+							<groupId>org.codehaus.groovy</groupId>
+							<artifactId>groovy-eclipse-batch</artifactId>
+							<version>2.3.4-01</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+		      </plugins>
+  		</pluginManagement> 
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -105,6 +95,8 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<!-- spring설정파일의 namespace를 찾지 못하는 에러를 해결하기 위해 shade 플러그인 사용 and transformers 
+				태그 추가 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -127,17 +119,14 @@
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass></mainClass>
+									<mainClass>com.hadoop.ExecuteDriver</mainClass>
 								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 							</transformers>
-							<!-- remove manifest signature files -->
-							<!-- http://devday.tistory.com/entry/Exception-in-thread-main-javalangSecurityException-Invalid-signature-file-digest-for-Manifest-main-attributes -->
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
 									<excludes>
+										<exclude>org/datanucleus/**</exclude>
 										<exclude>META-INF/*.SF</exclude>
 										<exclude>META-INF/*.DSA</exclude>
 										<exclude>META-INF/*.RSA</exclude>
