--- a/jpa-study/pom.xml
+++ b/jpa-study/pom.xml
@@ -34,6 +34,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
   		<springframework.version>4.0.1.RELEASE</springframework.version>
+  		<hibernate.version>4.0.0.Final</hibernate.version>
+  		<h2db.version>1.4.187</h2db.version>
 	</properties>
 
 	<dependencies>
@@ -51,12 +53,12 @@
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-entitymanager</artifactId>
-		    <version>4.0.0.Final</version>
+		    <version>${hibernate.version}</version>
 		</dependency> 
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
-		    <version>1.4.177</version>
+		    <version>${h2db.version}</version>
 		</dependency>
 		<!-- spring -->
 		<dependency>
