--- a/elasticsearch-study/pom.xml
+++ b/elasticsearch-study/pom.xml
@@ -69,6 +69,20 @@
 			<artifactId>groovy-all</artifactId>
 			<version>2.3.10</version>
 		</dependency>
+		<!-- es1.4와 groovy2.3.10 사용시 com.vividsolutions.jts.geom.Coordinate class not found error 발생 -->
+		<!-- 아래와  같은 라이브러리 추가해야함 -->
+		<!-- https://github.com/elastic/elasticsearch/issues/9891 -->
+		<dependency>
+			<groupId>com.vividsolutions</groupId>
+			<artifactId>jts</artifactId>
+			<version>1.13</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- logging -->
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -86,14 +100,8 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${springframework.version}</version>
-			<!-- 
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-			 -->
+			<!-- <exclusions> <exclusion> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
+				</exclusion> </exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
