--- a/es1-study/pom.xml
+++ b/es1-study/pom.xml
@@ -25,12 +25,10 @@
 			<id>clojars.org</id>
 			<url>http://clojars.org/repo</url>
 		</repository>
-		<!-- 
 		<repository>
 			<id>tapacross</id>
 			<url>http://121.254.177.182:8081/nexus/content/repositories/tapacross</url>
 		</repository>
-		 -->
 	</repositories>
 
 	<profiles>
@@ -161,13 +159,16 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>com.oracle.ojdbc</groupId>
 			<artifactId>odjbc5_g</artifactId>
 			<version>11.2.0.4</version>
 		</dependency>
-		 -->
+		<dependency>
+			<groupId>com.tapacross.sns.analyzer</groupId>
+			<artifactId>my-lucene-analyzer-4-10-0</artifactId>
+			<version>0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
