--- a/es-1-analysis/pom.xml
+++ b/es-1-analysis/pom.xml
@@ -1,13 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.elasticsearch</groupId>
-  <artifactId>es-1-0-0-analysis</artifactId>
+  <artifactId>es-1-analysis</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
-  <name>es-1-0-0-analysisy</name>
+  <name>es-1-analysisy</name>
   <url>http://maven.apache.org</url>
 
   <properties>
