--- a/es-1-analysis/pom.xml
+++ b/es-1-analysis/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.5</java.version>
 		<es.version>1.0.0</es.version>
 		<springframework.version>4.0.1.RELEASE</springframework.version>
 	</properties>
@@ -63,6 +64,7 @@
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
 			<version>${es.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
@@ -166,8 +168,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.tapacross.sns.analyzer</groupId>
-			<artifactId>my-lucene-analyzer-4-10-0</artifactId>
-			<version>0.1</version>
+			<artifactId>my-lucene-analyzer-4</artifactId>
+			<version>4.6.1</version>
 		</dependency>
 	</dependencies>
 
@@ -271,6 +273,25 @@
 					</execution>
 				</executions>
 			</plugin>
+	      <plugin>
+	        <artifactId>maven-assembly-plugin</artifactId>
+	        <version>2.3</version>
+	        <configuration>
+	          <appendAssemblyId>false</appendAssemblyId>
+	          <outputDirectory>${project.build.directory}/releases/</outputDirectory>
+	          <descriptors>
+	            <descriptor>${basedir}/src/main/resources/assemblies/plugin.xml</descriptor>
+	          </descriptors>
+	        </configuration>
+	        <executions>
+	          <execution>
+	            <phase>package</phase>
+	            <goals>
+	              <goal>single</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+	      </plugin>
 		</plugins>
 	</build>
 </project>
