--- a/my-lucene-analyzer-4/pom.xml
+++ b/my-lucene-analyzer-4/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.tapacross.sns.analyzer</groupId>
-	<artifactId>my-lucene-analyzer-4-10-0</artifactId>
-	<version>0.1</version>
+	<artifactId>my-lucene-analyzer-4</artifactId>
+	<version>4.6.1</version>
 	<packaging>jar</packaging>
 
 	<name>my-lucene-analyzer-4-6-1</name>
@@ -53,13 +53,13 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
 			<version>${lucene.version}</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
 			<version>${lucene.version}</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
